# todo-list

./: .gitignore
backend/: BUILD  Makefile  WORKSPACE
backend/todo-list/: todo-list.proto
backend/todolist/: BUILD.bazel  todo-list.pb.go  todo-list.proto  todolist.pb.go  todolist.pb.gw.go  todolist.proto
backend/todolist_server/: BUILD.bazel  Gopkg.toml  main.go
frontend/: package.json  webpack.config.js
frontend/client/: index.html  index.js
frontend/client/components/: home.js
frontend/client/redux/: reducer.js  store.js
frontend/server/: index.js
