load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")

proto_library(
    name = "todolist_proto",
    srcs = ["todolist.proto"],
    visibility = ["//visibility:public"],
    deps = ["//google/api:api_proto"],
)

go_grpc_library(
    name = "todolist_go_proto",
    importpath = "github.com/mrudof/todolist/todolist",
    proto = ":todolist_proto",
    visibility = ["//visibility:public"],
    deps = ["//google/api:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["todolist.pb.gw.go"],
    embed = [":todolist_go_proto"],
    importpath = "github.com/mrudof/todolist/todolist",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
